--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <h2>Video Game Music</h2>
-    <button>Test</button>
+    <input class="albumName" type="text" />
+    <button class="album">Test</button>
   </body>
   <script src="/vgSoundtrackApi/main.js"></script>
 </html>
